@@ -1,1 +1,1 @@
-gprolog-1.2.15
+gprolog-1.2.16
