@@ -4,7 +4,7 @@
 
 # if you change here the version also change it in PROLOG_VERSION below
 
-AC_INIT(gprolog, 1.2.15, bug-prolog@gnu.org)
+AC_INIT(gprolog, 1.2.16, bug-prolog@gnu.org)
 AC_PREREQ(2.52)
 # AC_CONFIG_AUX_DIR(ConfUtils) to do...
 AC_CONFIG_SRCDIR(SETVARS)
@@ -31,8 +31,8 @@ AC_CONFIG_FILES(Makefile
 
 PROLOG_NAME='GNU Prolog'
 PROLOG_NAME1='gprolog'
-PROLOG_VERSION='1.2.15'
-PROLOG_DATE='Sep 12 2002'
+PROLOG_VERSION='1.2.16'
+PROLOG_DATE='Sep 19 2002'
 PROLOG_COPYRIGHT='Copyright (C) 1999-2002 Daniel Diaz'
 
 TOP_LEVEL=$PROLOG_NAME1
