@@ -1,3 +1,7 @@
+Thu Sep 19 12:53:45 CEST 2002 <Daniel.Diaz@inria.fr>
+	
+	* fix bug when detecting if a stream can be repositioned
+
 Thu Sep 12 18:45:10 CEST 2002 <Daniel.Diaz@inria.fr>
 
 	* fix bug in output to constant terms (e.g. write_to_atom/2)
